--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,36 @@
+
 buildscript {
-    repositories {
-        maven {url "https://plugins.gradle.org/m2/"}
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.6.RELEASE")
-    }
+	repositories {
+	       maven{url("https://plugins.gradle.org/m2/")}
+	}
+	dependencies {
+	       classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.6.RELEASE")
+	}
 }
 
-apply plugin: 'java'
+
+apply plugin: 'java' 
+apply plugin: 'idea' 
 apply plugin: 'eclipse'
-apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
+
 jar {
-    baseName = 'rest-mongo-mitarbeiter'
-    version =  '0.0.1'
+	baseName = 'rest-mongo-mitarbeiter'
+	version = '0.0.1'
 }
 
+
 repositories {
-    maven {url "https://plugins.gradle.org/m2/"}
+    maven{url("https://plugins.gradle.org/m2/")}
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-rest")
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
 }
-
