--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,6 @@
-
 buildscript {
-	ext {
-		springBootVersion     = "1.5.6.RELEASE"
-		gradleDockerVersion   = "1.2"
-        }
 	repositories { maven{url("https://plugins.gradle.org/m2/")} }
-	dependencies {
-	       classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-               classpath("se.transmode.gradle:gradle-docker:${gradleDockerVersion}")
-	}
+	dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.6.RELEASE") }
 }
 
 
@@ -16,26 +8,11 @@ apply plugin: 'java'
 apply plugin: 'idea' 
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'docker'
 
-group = 'rest-mongo-mitarbeiter'
 
 jar {
 	baseName = 'restserver'
 	version = '0.0.1'
-}
-
-task buildDocker(type: Docker, dependsOn: build) {
-  baseImage = 'frolvlad/alpine-oraclejdk8:slim'
-  push = true
-  applicationName = jar.baseName
-  dockerfile = file('docker/Dockerfile')
-  doFirst {
-        copy {
-            from jar
-            into stageDir
-        }
-    }
 }
 
 
