--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -32,3 +32,18 @@ services:
 
     links:
       - mongodb:mongodb
+
+
+  # Web service
+  frontend:
+    # Give it a name
+    container_name: nginx_container
+
+    image: nginx:alpine
+
+    volumes:
+      - ./web:/usr/share/nginx/html
+
+    ports:
+      - "80:80"
+      - "443:443"
